--- a/package.json
+++ b/package.json
@@ -1,143 +1,148 @@
 {
-  "name": "widgets",
-  "version": "0.0.1-SNAPSHOT",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "clean": "rm -rf esm cjs typings umd stats.html",
-    "lint": "eslint src/**/*.{ts,tsx} --max-warnings=0",
-    "build": "npm run build:prepublish",
-    "build:prepublish": "run-p build:typings build:source",
-    "build:typings": "tsc",
-    "build:source": "rollup -c",
-    "build:analyze": "cross-env ROLLUP_ANALYZE=true BUILD_ENV=umd npm run build",
-    "postbuild": "npm pack && rm -rf *.tgz",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
-    "prepublishOnly": "run-s lint test build:prepublish && npm run pretty && npm run prettyValidate",
-    "pretty": "prettier --write \"./src/**/*.{ts,tsx,json,js,scss}\"",
-    "storybook": "start-storybook -p 9009 -s public",
-    "build-storybook": "build-storybook -s public",
-    "prettyValidate": "git status --porcelain"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/sl-test-org/widgets.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/sl-test-org/widgets/issues"
-  },
-  "homepage": "https://github.com/sl-test-org/widgets#readme",
-  "peerDependencies": {
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-bootstrap": "^1.6.1",
-    "bootstrap": "^4.6.0"
-  },
-  "dependencies": {
-    "classnames": "^2.3.1",
-    "graphql-hooks": "^5.2.0",
-    "graphql-ws": "^5.3.0",
-    "subscriptions-transport-ws": "^0.9.19",
-    "use-http": "^1.0.21"
-  },
-  "devDependencies": {
-    "sass": "^1.38.1",
-    "bootstrap": "^4.6.0",
-    "react-bootstrap": "^1.6.1",
-    "@babel/core": "^7.14.8",
-    "@babel/plugin-transform-runtime": "^7.14.5",
-    "@babel/preset-env": "^7.14.8",
-    "@babel/preset-react": "^7.14.5",
-    "@babel/preset-typescript": "^7.14.5",
-    "@babel/runtime": "^7.14.8",
-    "@rollup/plugin-babel": "^5.3.0",
-    "@rollup/plugin-commonjs": "^19.0.1",
-    "@rollup/plugin-node-resolve": "^13.0.2",
-    "@rollup/plugin-replace": "^3.0.0",
-    "@rollup/plugin-url": "^6.0.0",
-    "@storybook/addon-actions": "^6.3.5",
-    "@storybook/addon-controls": "^6.3.5",
-    "@storybook/addon-docs": "^6.3.5",
-    "@storybook/addon-essentials": "^6.3.5",
-    "@storybook/addon-info": "^5.3.21",
-    "@storybook/addon-links": "^6.3.5",
-    "@storybook/addons": "^6.3.5",
-    "@storybook/react": "^6.3.5",
-    "@svgr/rollup": "^5.5.0",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^9.5.0",
-    "@types/classnames": "^2.2.9",
-    "@types/graphql": "^14.5.0",
-    "@types/jest": "^26.0.24",
-    "@types/react": "^17.0.15",
-    "@types/react-dom": "^17.0.9",
-    "@types/webpack-env": "^1.14.0",
-    "@types/ws": "^7.4.7",
-    "@typescript-eslint/eslint-plugin": "^4.28.4",
-    "@typescript-eslint/parser": "^4.28.4",
-    "babel-eslint": "^10.1.0",
-    "babel-loader": "^8.2.2",
-    "cross-env": "^6.0.3",
-    "eslint": "^7.31.0",
-    "eslint-config-react-app": "^6.0.0",
-    "eslint-plugin-flowtype": "^5.8.0",
-    "eslint-plugin-import": "^2.23.4",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.24.0",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "fetch-mock": "^9.11.0",
-    "jest": "^26.6.3",
-    "node-fetch": "^2.6.0",
-    "node-sass": "^4.13.1",
-    "npm-run-all": "^4.1.5",
-    "postcss-prefixer": "^2.1.2",
-    "prettier": "^2.3.2",
-    "react": "^17.0.2",
-    "react-docgen-typescript-loader": "^3.6.0",
-    "react-dom": "^17.0.2",
-    "rollup": "^2.53.3",
-    "rollup-plugin-analyzer": "^4.0.0",
-    "rollup-plugin-postcss": "^4.0.0",
-    "rollup-plugin-sizes": "^1.0.4",
-    "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-visualizer": "^5.5.2",
-    "sass-loader": "^9.0.3",
-    "ts-jest": "^26.5.6",
-    "typescript": "^4.3.5",
-    "webpack": "^4.46.0"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
+    "name": "@sl-test-org/widgets",
+    "version": "0.0.1",
+    "description": "Collection of widgets from Semaphore Studio",
+    "author": "Smartlogic Semaphore",
+    "license": "See license in  LICENCE.txt file",
+    "main": "index.js",
+    "module": "esm/semaphore-studio-widgets.js",
+    "types": "typings/index.d.ts",
+    "engines": {
+      "node": ">= 10.0.0"
+    },
+    "files": [
+      "index.js",
+      "styles",
+      "esm",
+      "cjs",
+      "umd",
+      "typings"
     ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app"
+    "scripts": {
+      "clean": "rm -rf esm cjs typings umd stats.html",
+      "lint": "eslint src/**/*.{ts,tsx} --max-warnings=0",
+      "build": "npm run build:prepublish",
+      "build:prepublish": "run-p build:typings build:source",
+      "build:typings": "tsc",
+      "build:source": "rollup -c",
+      "build:analyze": "cross-env ROLLUP_ANALYZE=true BUILD_ENV=umd npm run build",
+      "postbuild": "npm pack && rm -rf *.tgz",
+      "test": "jest",
+      "test:watch": "jest --watch",
+      "test:coverage": "jest --coverage",
+      "prepublishOnly": "run-s lint test build:prepublish && npm run pretty && npm run prettyValidate",
+      "pretty": "prettier --write \"./src/**/*.{ts,tsx,json,js,scss}\"",
+      "storybook": "start-storybook -p 9009 -s public",
+      "build-storybook": "build-storybook -s public",
+      "prettyValidate": "git status --porcelain"
+    },
+    "peerDependencies": {
+      "react": "^17.0.2",
+      "react-dom": "^17.0.2",
+      "react-bootstrap": "^1.6.1",
+      "bootstrap": "^4.6.0"
+    },
+    "dependencies": {
+      "classnames": "^2.3.1",
+      "graphql-hooks": "^5.2.0",
+      "graphql-ws": "^5.3.0",
+      "subscriptions-transport-ws": "^0.9.19",
+      "use-http": "^1.0.21"
+    },
+    "devDependencies": {
+      "sass": "^1.38.1",
+      "bootstrap": "^4.6.0",
+      "react-bootstrap": "^1.6.1",
+      "@babel/core": "^7.14.8",
+      "@babel/plugin-transform-runtime": "^7.14.5",
+      "@babel/preset-env": "^7.14.8",
+      "@babel/preset-react": "^7.14.5",
+      "@babel/preset-typescript": "^7.14.5",
+      "@babel/runtime": "^7.14.8",
+      "@rollup/plugin-babel": "^5.3.0",
+      "@rollup/plugin-commonjs": "^19.0.1",
+      "@rollup/plugin-node-resolve": "^13.0.2",
+      "@rollup/plugin-replace": "^3.0.0",
+      "@rollup/plugin-url": "^6.0.0",
+      "@storybook/addon-actions": "^6.3.5",
+      "@storybook/addon-controls": "^6.3.5",
+      "@storybook/addon-docs": "^6.3.5",
+      "@storybook/addon-essentials": "^6.3.5",
+      "@storybook/addon-info": "^5.3.21",
+      "@storybook/addon-links": "^6.3.5",
+      "@storybook/addons": "^6.3.5",
+      "@storybook/react": "^6.3.5",
+      "@svgr/rollup": "^5.5.0",
+      "@testing-library/jest-dom": "^5.14.1",
+      "@testing-library/react": "^9.5.0",
+      "@types/classnames": "^2.2.9",
+      "@types/graphql": "^14.5.0",
+      "@types/jest": "^26.0.24",
+      "@types/react": "^17.0.15",
+      "@types/react-dom": "^17.0.9",
+      "@types/webpack-env": "^1.14.0",
+      "@types/ws": "^7.4.7",
+      "@typescript-eslint/eslint-plugin": "^4.28.4",
+      "@typescript-eslint/parser": "^4.28.4",
+      "babel-eslint": "^10.1.0",
+      "babel-loader": "^8.2.2",
+      "cross-env": "^6.0.3",
+      "eslint": "^7.31.0",
+      "eslint-config-react-app": "^6.0.0",
+      "eslint-plugin-flowtype": "^5.8.0",
+      "eslint-plugin-import": "^2.23.4",
+      "eslint-plugin-jsx-a11y": "^6.4.1",
+      "eslint-plugin-react": "^7.24.0",
+      "eslint-plugin-react-hooks": "^4.2.0",
+      "fetch-mock": "^9.11.0",
+      "jest": "^26.6.3",
+      "node-fetch": "^2.6.0",
+      "node-sass": "^4.13.1",
+      "npm-run-all": "^4.1.5",
+      "postcss-prefixer": "^2.1.2",
+      "prettier": "^2.3.2",
+      "react": "^17.0.2",
+      "react-docgen-typescript-loader": "^3.6.0",
+      "react-dom": "^17.0.2",
+      "rollup": "^2.53.3",
+      "rollup-plugin-analyzer": "^4.0.0",
+      "rollup-plugin-postcss": "^4.0.0",
+      "rollup-plugin-sizes": "^1.0.4",
+      "rollup-plugin-terser": "^7.0.2",
+      "rollup-plugin-visualizer": "^5.5.2",
+      "sass-loader": "^9.0.3",
+      "ts-jest": "^26.5.6",
+      "typescript": "^4.3.5",
+      "webpack": "^4.46.0"
+    },
+    "browserslist": {
+      "production": [
+        ">0.2%",
+        "not dead",
+        "not op_mini all"
+      ],
+      "development": [
+        "last 1 chrome version",
+        "last 1 firefox version",
+        "last 1 safari version"
+      ]
+    },
+    "eslintConfig": {
+      "extends": [
+        "react-app"
+      ],
+      "plugins": [
+        "@typescript-eslint"
+      ]
+    },
+    "eslintIgnore": [
+      "esm",
+      "cjs",
+      "umd"
     ],
-    "plugins": [
-      "@typescript-eslint"
-    ]
-  },
-  "eslintIgnore": [
-    "esm",
-    "cjs",
-    "umd"
-  ],
-  "prettier": {
-    "endOfLine": "auto",
-    "printWidth": 120,
-    "trailingComma": "all"
+    "prettier": {
+      "endOfLine": "auto",
+      "printWidth": 120,
+      "trailingComma": "all"
+    }
   }
-}
