--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,7 +3,7 @@ registries:
   npm-github:
     type: npm-registry
     url: https://npm.pkg.github.com
-    token: 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
+    token: ${{ secrets.NPM_TOKEN }}
 updates:
   - package-ecosystem: "npm"
     directory: "/"
